linux 用户管理补充

--- a/汇编/汇编指令.md
+++ b/汇编/汇编指令.md
@@ -13,3 +13,6 @@ mov eax, dword ptr[1128h]
 ```
 
 word 是2个字节, dword(double world) 4个字节，qword(quad world) 8个字节
+
+- call: call 函数地址
+- lea: `lea dest,[地址值]`, 将dest的值赋值为地址, load effect address
