--- a/汇编/引用的本质.md
+++ b/汇编/引用的本质.md
@@ -1,3 +1,4 @@
+<h2>引用的大小</h2>
 
 引用: 变量的别名，用到的地方可以认为就是原变量，所以sizeof()测不出本质大小
 
@@ -22,6 +23,8 @@ cout << sizeof(sct) << endl;
 输出8
 
 --------------
+
+<h2>引用和指针的关系</h2>
 
 ```c++
 int a = 10;
@@ -60,3 +63,38 @@ ref = 20;
 ```
 
 发现其汇编代码一致。
+
+-----------------
+
+当常引用指向了不同类型的数据时，会产生临时变量，即引用指向的不是初始化时的那个变量
+
+-----------------
+
+<h2>数组引用</h2>
+
+
+数组名是数组的地址，也是数组首元素的地址, 数组名不可变
+
+所以 `int arr[] = {1, 2, 3}`中，arr的类型为 `const int *`
+
+我们可以声明 `int * const &ref = arr`
+
+```c++
+int arr[] = {1, 2, 3};
+int* const &ref = arr;
+cout << ref[0] << endl;
+cout << ref[1] << endl;
+cout << ref[2] << endl;
+```
+
+第二种方式
+
+```c++
+int arr[] = {1, 2, 3};
+int (&ref)[3] = arr;
+cout << ref[0] << endl;
+cout << ref[1] << endl;
+cout << ref[2] << endl;
+```
+
+显然第一种方式更方便些，不需要指定数组的大小
