--- a/软件破解.md
+++ b/软件破解.md
@@ -17,3 +17,9 @@ x64汇编, x86汇编
 1. ctrl g: 搜索内存地址, 需要加上 0x
 
 <h3>cheat engine</h3>
+
+<h3>visul studio</h3>
+
+- 查找窗口: FindWindow(CString([主类名]), CString([窗口名]));
+    
+    `vs -> 工具 -> spy++ -> 搜索 -> 查找窗口`
