--- a/docs/linux/命令行工具/06_内存管理.md
+++ b/docs/linux/命令行工具/06_内存管理.md
@@ -55,7 +55,11 @@ A buffer is something that has yet to be "written" to disk.
 
 A cache is something that has been "read" from the disk and stored for later use.
 
+## buffer
+
 也就是说buffer是用于存放要输出到disk（块设备）的数据的，而cache是存放从disk上读出的数据。这二者是为了提高IO性能的，并由OS管理。
+
+## cache
 
 Linux和其他成熟的操作系统（例如windows），为了提高IO read的性能，总是要多cache一些数据，这也就是为什么FO[2][6]（cached memory）比较大，而FO[2][3]比较小的原因。我们可以做一个简单的测试:
 
@@ -94,3 +98,12 @@ free命令的所有输出值都是从/proc/meminfo中读出的。
 
 procps这个包自己实现了meminfo()这个函数。可以下载一个procps的tar包看看具体实现，现在最新版式3.2.8。
 ```
+
+## 查询页面交换
+
+查看页面交换发生状况 页面发生交换时，服务器的吞吐量会大幅下降；服务器状况不良时，如果怀疑因为内存不足而导致了页面交换的发生，可以使用sar -W这个命令来确认是否发生了大量的交换；
+
+```
+$sar -W 1 3
+```
+
