--- a/docs/linux/命令行工具/09_网络工具.md
+++ b/docs/linux/命令行工具/09_网络工具.md
@@ -3,29 +3,36 @@
 
 netstat 命令用于显示各种网络相关信息，如网络连接，路由表，接口状态 (Interface Statistics)，masquerade 连接，多播成员 (Multicast Memberships) 等等。
 
-- 列出所有端口 (包括监听和未监听的):
+## 列出所有端口
 
-`netstat -a`
+(包括监听和未监听的)
 
-- 列出所有 tcp 端口:
+```
+netstat -a
+```
 
-`netstat -at`
+## 列出所有 tcp 端口
 
-- 列出所有有监听的服务状态:
+```
+netstat -at
+```
 
-`netstat -l`
+## 列出所有有监听的服务状态
 
-- 使用netstat工具查询端口:
+```
+netstat -l
+```
+
+## 查询端口
 
 ```
 $netstat -antp | grep 6379
-tcp        0      0 127.0.0.1:6379          0.0.0.0:*               LISTEN      25501/redis-server
 ```
 
+## 列出所有的网络连接
+
 ```
-$ps 25501
-  PID TTY      STAT   TIME COMMAND
-25501 ?        Ssl   28:21 ./redis-server ./redis.conf
+$lsof -i
 ```
 
 lsof（list open files）是一个列出当前系统打开文件的工具。
@@ -51,49 +58,35 @@ lsof（list open files）是一个列出当前系统打开文件的工具。
 
 <h3>路由状态</h3>
 
-- 查看路由状态:
+## 查看路由状态
 
 ```
 $route -n
 ```
 
-- 发送ping包到地址IP:
+## 发送ping包到地址IP
 
 ```
 $ping IP
 ```
 
-- 探测前往地址IP的路由路径:
+## 探测前往地址IP的路由路径
 
 ```
 $traceroute IP
 ```
 
-- DNS查询，寻找域名domain对应的IP:
+## DNS查询
+
+寻找域名domain对应的IP
 
 ```
 $host domain
 ```
 
-
-<h3>镜像下载</h3>
-
-直接下载文件或者网页:
-
-```
-wget url
-```
-
-常用选项:
-
-```
--o：指定日志文件；输出都写入日志；
--c：断点续传
-```
-
 <h3>ftp sftp lftp ssh</h3>
 
-- SSH登陆:
+## SSH登陆
 
 ```
 $ssh ID@host
@@ -102,7 +95,7 @@ $ssh ID@host
 ssh登陆远程服务器host，ID为用户名。
 
 
-- ftp/sftp文件传输:
+## ftp/sftp文件传输
 
 ```
 $sftp ID@host
@@ -120,7 +113,7 @@ lcd # 在本地主机更改当前路径
 ```
 
 
-<h3>网络复制</h3>
+## 网络复制
 
 将本地localpath指向的文件上传到远程主机的path路径:
 
@@ -129,7 +122,7 @@ lcd # 在本地主机更改当前路径
 $scp     localpath ID@host:path
 ```
 
--r 要紧接着 scp
+<span style="color: red">-r 要紧接着 scp</span>
 
 以ssh协议，遍历下载path路径下的整个文件系统，到本地的localpath:
 
