--- a/docs/语言/python/0_实用脚本.md
+++ b/docs/语言/python/0_实用脚本.md
@@ -1,3 +1,125 @@
+
+
+## PrintPretty
+
+```python
+import sys
+import re
+
+
+if "__main__" == __name__:
+    # print(sys.argv)
+    print("========================>\n")
+    string = sys.argv[1]
+    string = re.sub("\\\\n", "\\n", string)
+    print(string)
+```
+
+## print 增加颜色
+
+print("\033[0;32;40m------------------\033[0m")
+
+```
+python3中print带颜色输出的格式：
+
+           \033[显示方式;前景色；背景色m需要显示的文字\033[0m
+
+           其中 \033[
+                    开头部分
+
+                \033[0m
+                    结尾部分
+
+                显示方式、前景色、背景色是可选参数，可以只写其中的某一个；
+
+                三个参数表示不同的含义，并且数值都是唯一没有重复的，所以三个参数的书写没有先后顺序，没有固定要求，但还是建议按照默认格式规范书写。
+
+数值标示的参数含义：
+
+   1、显示方式：
+
+          0（默认）、1（高亮）、22（非粗体）、4（下划线）、24（非下划线）、 5（闪烁）、25（非闪烁）、7（反显）、27（非反显）
+
+    2、前景色：
+
+           30（黑色）、31（红色）、32（绿色）、 33（×××）、34（蓝色）、35（洋 红）、36（青色）、37（白色）
+
+    3、背景色:
+
+           40（黑色）、41（红色）、42（绿色）、 43（×××）、44（蓝色）、45（洋 红）、46（青色）、47（白色）
+
+   例：
+
+   print("\033[1;37;40m文字\033[0m") #高亮；白字；黑色背景
+```
+
+## 检查目录文件改变，自动复制到指定目录
+
+```python
+#conding=utf8
+import os
+import copy
+import time
+
+'''
+检查目录文件改变，自动复制到指定目录
+'''
+
+is_window = True
+source_path = "//172.16.8.30/server/trunk/client/LuaScripts"
+target_path = r"d:\\client2\LuaScripts"
+
+file2time = {}
+
+def is_update_file(path, time):
+    path = str(path)
+    old_time = file2time.get(path, 0)
+    file2time[path] = time
+
+    # print(path, old_time)
+    return old_time > 0 and time > old_time
+
+
+def mv_to_window(path):
+    rep = copy.copy(source_path)
+    # window 需要换行符转换
+    if is_window:
+        path = path.replace(r'/', '\\')
+        rep = rep.replace(r'/', '\\')
+
+    newpath = path.replace(rep, target_path)
+    print("newpath: " + newpath)
+    cmd = "copy {oldpath} {newpath}".format(newpath=newpath, oldpath=path)
+    print("cmd: " + cmd)
+    print("\n")
+    os.popen(cmd)
+
+def main():
+    g = os.walk(source_path)
+    for path, dir_list, file_list in g:
+        for file_name in file_list:
+            full_path = os.path.join(path, file_name)
+            # print(full_path)
+
+            modify_time = os.path.getmtime(full_path)
+            # print(modify_time)
+            if not file_name.endswith("swp") and is_update_file(full_path, modify_time):
+                print("update file: " + full_path)
+                mv_to_window(full_path)
+
+
+if __name__ == "__main__":
+    i = 0
+    while True:
+        time.sleep(1)
+        i += 1
+        print("watch file change ...: " + str(i))
+        main()
+```
+
+## python 操作excel
+
+```python
 #!/bin/python3
 # coding=utf-8
 #Author: yiouejv
@@ -227,3 +349,4 @@ def main():
 
 if __name__ == "__main__":
     main()
+```
