--- a/docs/语言/python/06_爬虫.md
+++ b/docs/语言/python/06_爬虫.md
@@ -264,6 +264,16 @@ driver.quit()
 
 ### 爬取彼岸壁纸
 
+```
+hpack==3.0.0
+hyper==0.7.0
+hyperframe==3.2.0
+lxml==4.6.3
+regex==2021.4.4
+requests==2.23.0
+urllib3==1.25.9
+```
+
 ```python title="爬取彼岸壁纸"
 #!/bin/python3
 #Author: yiouejv
