--- a/docs/逆向/汇编.md
+++ b/docs/逆向/汇编.md
@@ -163,3 +163,34 @@ cpu 可以用不同的短地址和偏移地址形成同一个物理地址
 cs 为代码段寄存器, ip 为指令指针寄存器(指定了代码段的偏移), 他们指示了cpu当前要读取的指令的地址。
 
 cs:ip
+
+## EIP
+
+EIP寄存器，存储cpu执行下一条指令的地址。
+
+### 怎么修改EIP寄存器的值
+
+#### JMP 指令
+
+只修改EIP的值, JMP 寄存器/立即数/内存
+
+MOV EIP,立即数/寄存器/内存
+
+#### CALL 指令
+
+修改EIP的值，并把下一句指令的地址压入堆栈中
+
+MOV EIP,立即数/寄存器/内存, 简写为：CALL 立即数/寄存器/内存
+
+与JMP唯一的区别: 在堆栈中存储Call指令的下一行地址
+
+#### RET 指令
+
+把当前栈顶里的值放到EIP里，让栈顶指针加4个字节
+
+ADD ESP,4
+
+MOV EIP, [ESP-4]简写为RET
+
+
+
