--- a/docs/linux/命令行工具/02_用户管理.md
+++ b/docs/linux/命令行工具/02_用户管理.md
@@ -25,6 +25,10 @@
 语法:
 
 - 添加用户: useradd -m 用户名
+- 
+- 免密码sudo: visudo 打开文件，填入 yiouejv ALL=(ALL:ALL) NOPASSWD:ALL
+- 需密码sudo: visudo 打开文件，填入 yiouejv ALL=(ALL:ALL) ALL
+- 
 - 设置密码: passwd 用户名
 - 删除用户: userdel -r 用户名
 - 为用户指定: usermod -s /bin/bash 用户名
