--- a/docs/linux/命令行工具/02_用户管理.md
+++ b/docs/linux/命令行工具/02_用户管理.md
@@ -26,8 +26,8 @@
 
 - 添加用户: useradd -m 用户名
 - 
-- 免密码sudo: visudo 打开文件，填入 yiouejv ALL=(ALL:ALL) NOPASSWD:ALL
-- 需密码sudo: visudo 打开文件，填入 yiouejv ALL=(ALL:ALL) ALL
+- 免密码sudo VISUAL=vim visudo 打开文件，填入 yiouejv ALL=(ALL:ALL) NOPASSWD:ALL
+- 需密码sudo VISUAL=vim visudo 打开文件，填入 yiouejv ALL=(ALL:ALL) ALL
 - 
 - 设置密码: passwd 用户名
 - 删除用户: userdel -r 用户名
